Add logic to capture the ID of color btn on click event
HTML - Add IDs to color buttons
JS - Add event listener to all buttons for captruing the ID value of color button clicked. Will use the ID in building out the changeColor function

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="content">
             <div class="board"></div>
             <div class="buttons">
-                <button>Black</button>
-                <button>White</button>
-                <button>Random</button>
-                <button>Clear</button>
+                <button class="color-button" id="black">Black</button>
+                <button class="color-button" id="white">White</button>
+                <button id="random">Random</button>
+                <button id="clear">Clear</button>
             </div>
             <div>
                 <input type="text" placeholder="Size of Board" id="size-input"><button id="size-button">Set Size</button>
