--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="content">
             <div class="board"></div>
             <div class="buttons">
-                <button class="color-button" id="black">Black</button>
-                <button class="color-button" id="white">White</button>
+                <button id="black">Black</button>
+                <button id="white">White</button>
                 <button id="random">Random</button>
                 <button id="clear">Clear</button>
             </div>
